# crunchy-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  account.go  build.rs  category.go  comment.go  common.go  crunchy-cli.1  crunchylists.go  crunchyroll-go.1  crunchyroll.go  crunchyroll_test.go  downloader.go  episode.go  error.go  flake.nix  format.go  go.mod  go.sum  main.go  movie_listing.go  news.go  parse.go  search.go  season.go  simulcast.go  stream.go  subtitle.go  suggestions.go  url.go  utils.go  video.go  wallpaper.go  watch_history.go  watchlist.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/scripts/: PKGBUILD.binary  PKGBUILD.source
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  lint.yml  publish.yml
cli/: root.go
cli/commands/: logger.go  unix.go  utils.go  windows.go
cli/commands/archive/: archive.go  compress.go
cli/commands/download/: download.go
cli/commands/info/: info.go
cli/commands/login/: login.go
cli/commands/update/: update.go
cmd/crunchyroll/: main.go
cmd/crunchyroll-go/: main.go
cmd/crunchyroll-go/cmd/: archive.go  download.go  info.go  logger.go  login.go  root.go  unix.go  update.go  utils.go  windows.go
cmd/crunchyroll/cmd/: download.go  login.go  root.go  utils.go
commands/: archive.go  download.go  info.go  logger.go  login.go  root.go  unix.go  update.go  utils.go  windows.go
crunchy-cli-core/: Cargo.toml  build.rs
crunchy-cli-core/src/: lib.rs
crunchy-cli-core/src/archive/: command.rs  filter.rs  mod.rs
crunchy-cli-core/src/cli/: archive.rs  download.rs  log.rs  login.rs  mod.rs  utils.rs
crunchy-cli-core/src/download/: command.rs  filter.rs  mod.rs
crunchy-cli-core/src/login/: command.rs  mod.rs
crunchy-cli-core/src/search/: command.rs  filter.rs  format.rs  mod.rs
crunchy-cli-core/src/utils/: clap.rs  config.rs  context.rs  download.rs  ffmpeg.rs  filter.rs  fmt.rs  format.rs  interactive_select.rs  locale.rs  log.rs  mod.rs  os.rs  parse.rs  rate_limit.rs  sort.rs  subtitle.rs  sync.rs  video.rs
src/: main.rs
utils/: extract.go  file.go  format.go  http.go  locale.go  logger.go  match.go  save.go  sort.go  std.go  structure.go  system.go  url.go  vars.go  walk.go
