[package]
name = "crunchy-cli"
authors = ["Crunchy Labs Maintainers"]
version = "3.0.1"
edition = "2021"
license = "MIT"

[features]
default = ["openssl-static"]

openssl = ["crunchy-cli-core/openssl"]
openssl-static = ["crunchy-cli-core/openssl-static"]

[dependencies]
tokio = { version = "1.31", features = ["macros", "rt-multi-thread", "time"], default-features = false }

crunchy-cli-core = { path = "./crunchy-cli-core" }

[build-dependencies]
chrono = "0.4"
clap = { version = "4.3", features = ["string"] }
clap_complete = "4.3"
clap_mangen = "0.2"

crunchy-cli-core = { path = "./crunchy-cli-core" }

[profile.release]
strip = true
opt-level = "z"
lto = true
