[package]
name = "crunchy-cli"
authors = ["Crunchy Labs Maintainers"]
version = "3.0.2"
edition = "2021"
license = "MIT"

[features]
default = ["openssl-static"]

openssl = ["crunchy-cli-core/openssl"]
openssl-static = ["crunchy-cli-core/openssl-static"]

[dependencies]
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "time"], default-features = false }

crunchy-cli-core = { path = "./crunchy-cli-core" }

[build-dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["string"] }
clap_complete = "4.4"
clap_mangen = "0.2"

crunchy-cli-core = { path = "./crunchy-cli-core" }

[workspace]
members = ["crunchy-cli-core"]

[patch.crates-io]
# fork of the `native-tls` crate which uses openssl as backend on every platform. this is done as `reqwest` only supports
# `rustls` and `native-tls` as tls backend
native-tls = { git = "https://github.com/crunchy-labs/rust-not-so-native-tls.git", rev = "570100d" }

[profile.release]
strip = true
opt-level = "z"
lto = true
