[package]
name = "crunchy-cli"
authors = ["Crunchy Labs Maintainers"]
version = "3.4.0"
edition = "2021"
license = "MIT"

[features]
default = ["native-tls"]

rustls-tls = ["crunchy-cli-core/rustls-tls"]
native-tls = ["crunchy-cli-core/native-tls"]
openssl-tls = ["dep:native-tls-crate", "native-tls-crate/openssl", "crunchy-cli-core/openssl-tls"]
openssl-tls-static = ["dep:native-tls-crate", "native-tls-crate/openssl", "crunchy-cli-core/openssl-tls-static"]

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"], default-features = false }

native-tls-crate = { package = "native-tls", version = "0.2.11", optional = true }

crunchy-cli-core = { path = "./crunchy-cli-core" }

[build-dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["string"] }
clap_complete = "4.5"
clap_mangen = "0.2"

crunchy-cli-core = { path = "./crunchy-cli-core" }

[workspace]
members = ["crunchy-cli-core"]

[patch.crates-io]
# fork of the `native-tls` crate which can use openssl as backend on every platform. this is done as `reqwest` only
# supports `rustls` and `native-tls` as tls backend
native-tls = { git = "https://github.com/crunchy-labs/rust-not-so-native-tls.git", rev = "fdba246" }

[profile.release]
strip = true
opt-level = "z"
lto = true
