[package]
name = "crunchy-cli-core"
authors = ["Crunchy Labs Maintainers"]
version = "3.1.1"
edition = "2021"
license = "MIT"

[features]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls", "reqwest/native-tls-alpn"]
openssl-tls = ["reqwest/native-tls", "reqwest/native-tls-alpn", "dep:rustls-native-certs"]
openssl-tls-static = ["reqwest/native-tls", "reqwest/native-tls-alpn", "reqwest/native-tls-vendored", "dep:rustls-native-certs"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "string"] }
chrono = "0.4"
crunchyroll-rs = { version = "0.7.0", features = ["dash-stream"] }
ctrlc = "3.4"
dialoguer = { version = "0.11", default-features = false }
dirs = "5.0"
derive_setters = "0.1"
fs2 = "0.4"
indicatif = "0.17"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
num_cpus = "1.16"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["socks"] }
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0"
shlex = "1.2"
sys-locale = "0.3"
tempfile = "3.8"
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
rustls-native-certs = { version = "0.6", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.27", features = ["fs"] }

[build-dependencies]
chrono = "0.4"
