[package]
name = "crunchy-cli-core"
authors = ["Crunchy Labs Maintainers"]
version = "3.2.1"
edition = "2021"
license = "MIT"

[features]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls", "reqwest/native-tls-alpn"]
openssl-tls = ["reqwest/native-tls", "reqwest/native-tls-alpn", "dep:rustls-native-certs"]
openssl-tls-static = ["reqwest/native-tls", "reqwest/native-tls-alpn", "reqwest/native-tls-vendored", "dep:rustls-native-certs"]

[dependencies]
anyhow = "1.0"
async-speed-limit = "0.4"
clap = { version = "4.4", features = ["derive", "string"] }
chrono = "0.4"
crunchyroll-rs = { version = "0.8.1", features = ["dash-stream", "experimental-stabilizations", "tower"] }
ctrlc = "3.4"
dialoguer = { version = "0.11", default-features = false }
dirs = "5.0"
derive_setters = "0.1"
futures-util = { version = "0.3", features = ["io"] }
fs2 = "0.4"
http = "0.2"
indicatif = "0.17"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
num_cpus = "1.16"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["socks", "stream"] }
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0"
shlex = "1.2"
sys-locale = "0.3"
tempfile = "3.9"
tokio = { version = "1.35", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = "0.7"
tower-service = "0.3"
rustls-native-certs = { version = "0.6", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.27", features = ["fs"] }

[build-dependencies]
chrono = "0.4"
